# himitsu

./: .gitignore  .isort.cfg  README.md  decode.py  encode.py  setup.cfg
himitsu/: __init__.py  loader.py  steganography.py
tests/: test_steganography.py
