[metadata]
name = himitsu
version = 1.0
url = https://github.com/jumon/himitsu
author = jumon
author_email = nozaki@sap.ist.i.kyoto-u.ac.jp
description = An official implementation of the paper "Addressing Segmentation Ambiguity in Neural Linguistic Steganography"
long_description = file: README.md
long_description_content_type = text/markdown
licence = file: LICENCE
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    torch>=1.7.1
    transformers>=4.5.1
tests_require =
    pytest
